2004-08-05 [christoph]

	* configure.ac
	* src/plugin.c
	* src/viewerprefs.c
		update for changes in 0.9.12cvs45

2004-08-02 [christoph]

	* src/viewer.c
		remove gtk_widget_ref()s

2004-07-30 [christoph]

	* src/viewer.c
	* src/viewer.glade
		add "First Page" and "Last Page" to popup menu

2004-07-26 [christoph]

	* src/viewer.c
		use correct callback prototypes

2004-07-26 [christoph]

	* src/viewer.c
	* src/viewer.glade
		add a popup menu with additional functions "Fit Page" and
		"Fit width"

2004-07-13 [christoph]

	* src/viewer.c
		add callbacks for zoom buttons

2004-06-30 [christoph]

	* .cvsignore
	* ChangeLog
	* Makefile.am
	* autogen.sh
	* configure.ac
	* config/.cvsignore		** NEW **
	* m4/.cvsignore			** NEW **
	* m4/ChangeLog			** NEW **
	* po/.cvsignore			** NEW **
	* po/ChangeLog			** NEW **
	* po/Makevars			** NEW **
	* po/POTFILES.in		** NEW **
	* po/de.po			** NEW **
	* src/.cvsignore
	* src/plugin.c
	* src/viewerprefs.c
	* src/libgtkgs/.cvsignore
		add gettext supprt for plugin

	* 0.7 released

2004-06-30  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (SUBDIRS): Add m4.
	(ACLOCAL_AMFLAGS): New variable.
	(EXTRA_DIST): Add config/config.rpath.
	* configure.ac (AC_OUTPUT): Add po/Makefile.in,

2003-11-26 [christoph]

	* 0.6 released

2003-10-21 [christoph]

	* src/viewer.c
		update viewer for MIME changes in Sylpheed

2003-09-10 [christoph]

	* 0.5 released

2003-08-23 [christoph]

	* src/plugin.c
		add version checks

2003-08-05 [christoph]

	* src/Makefile.am
	* src/plugin.c
	* src/viewer.c
	* src/viewerprefs.c
	* src/libgtkgs/Makefile.am
	* src/libgtkgs/ggvutils.c
	* src/libgtkgs/gtkgs.c
		used installed header files and sylpheed's pkg-config file
		to build the plugin

2003-07-07 [christoph]

	* src/libgtkgs/gtkgs.c
		apply patch for Ghostscript 8 by
		Charles Philip Chan <cpchan@sympatico.ca>

2003-06-09 [christoph]

	* .cvsignore
	* Makefile.am
	* configure.ac
	* config/.cvsignore		** NEW **
	* config/Makefile.am		** NEW **