@@ -1,3 +1,11 @@
+2004-08-20 [christoph]
+
+	* src/viewer.c
+	* src/viewerprefs.[ch]
+		o disable zoom menu entries when already zoom to the target size
+		  of the entry
+		o add auto zoom option when new file is loaded
+
 2004-08-05 [christoph]
 
 	* configure.ac
